@@ -1,4 +1,5 @@
 2007-02-02 David Moore http://davemoore.org/
+	* SVN 372: Avoid possible buffer overflow in topology code.
 	* SVN 371: Fix typo in trigger mode detection.
 
 2007-02-01 Damien Douxchamps http://damien.douxchamps.net/
